name:                cardano-updater
Version:             0.1
synopsis:            Cardano Updater
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-updater#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          vincent.hanquez@iohk.io
copyright:           2016 IOHK
category:            SystemTool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Updater
                       Updater.Delta.BsDiff
  other-modules:       Updater.Delta.Stream
  build-depends:       base >= 4.4 && < 5
                     , memory
                     , cryptonite
                     , foundation
                     , foundation-edge
                     , directory
                     , filepath
                     , bytestring
                     , utf8-string
                     , bzlib
                     , tar
  default-language:    Haskell2010
  Default-Extensions: NoImplicitPrelude
                      RebindableSyntax
                      OverloadedStrings
                      TypeFamilies
                      BangPatterns
                      DeriveDataTypeable

executable cardano-updater
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       foundation
                     , cardano-updater
                     , base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-updater
